--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,4 +13,4 @@ formats: all
 # Optionally set the version of Python and requirements required to build your docs
 python:
   version: 3.6
-  install: true
+  install: ['plutoPy']
