--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,4 +13,7 @@ formats: all
 # Optionally set the version of Python and requirements required to build your docs
 python:
   version: 3.6
+  install:
+    - method: setuptools
+    - path: .
   system_packages: true
