--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,15 +5,14 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
+  builder: html
   configuration: docs/source/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
-formats: all
+formats: 
+  - htmlzip
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
   version: 3.6
-  install:
-    - method: setuptools
-      path: .
   system_packages: true
