--- a/examples/config.ini
+++ b/examples/config.ini
@@ -2,3 +2,4 @@
 NORWAY_STOCKVIZ_CON = mssql+pyodbc://ro1:stockviz1@norway:1433/StockViz?driver=ODBC+Driver+17+for+SQL+Server
 NORWAY_STOCKVIZ_US_CON = mssql+pyodbc://ro1:stockviz1@norway:1433/StockVizUs?driver=ODBC+Driver+17+for+SQL+Server
 NORWAY_STOCKVIZ_US2_CON = mssql+pyodbc://ro1:stockviz1@norway:1433/StockVizUs2?driver=ODBC+Driver+17+for+SQL+Server
+SWEDEN_STOCKVIZ_CON = postgresql+psycopg2://ro1:stockviz1@sweden:5432/StockVizDyn
