added currencies and indian market flows

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -3,3 +3,4 @@ NORWAY_STOCKVIZ_CON = mssql+pyodbc://ro1:stockviz1@norway:1433/StockViz?driver=O
 NORWAY_STOCKVIZ_US_CON = mssql+pyodbc://ro1:stockviz1@norway:1433/StockVizUs?driver=ODBC+Driver+17+for+SQL+Server
 NORWAY_STOCKVIZ_US2_CON = mssql+pyodbc://ro1:stockviz1@norway:1433/StockVizUs2?driver=ODBC+Driver+17+for+SQL+Server
 SWEDEN_STOCKVIZ_CON = postgresql+psycopg2://ro1:stockviz1@sweden:5432/StockVizDyn
+WINDOWS_STOCKVIZ_CON = postgresql+psycopg2://ro1:stockviz1@windows:5432/StockVizBeka
